# embedding_bioacustic_music_benchmark

./: .gitignore  pyproject.toml
configs/experiments/: dcase_mert_linear.yaml  dummy.yaml  watkins_mert_fewshot.yaml  watkins_mert_linear.yaml  watkins_muq_linear.yaml  watkins_perch2_linear.yaml
data/manifests/: README.md  dcase.example.csv  watkins.example.csv
docs/: 00_START_HERE.md  01_WHERE_THINGS_GO.md  02_FIRST_PILOT.md  03_DAILY_WORKFLOW.md  04_ADD_DATASET.md  05_ENCODERS.md  06_METHODS_CHECKLIST.md  README.md
src/biobench/: __init__.py  audio.py  cache.py  cli.py  config.py  demo.py  evaluate.py  extract.py  manifest.py  paths.py
src/biobench/encoders/: __init__.py  base.py  dummy.py  mert.py  muq.py  perch2.py  registry.py
src/biobench/protocols/: fewshot.py  labels.py  linear.py  metrics.py
tests/: test_config.py  test_dummy_encoder.py  test_fewshot.py  test_manifest.py
tools/: README.md
